<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/dark_Blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/design_sem_nome_2_removebg_preview" />

    <ImageView
        android:id="@+id/ivVoltar"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:src="@drawable/seta_voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="261dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:text="LockIt"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/grey_white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="277dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Bem vindo de volta!"
        android:textAlignment="center"
        android:textColor="@color/grey_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view"
        style="@style/ContainerComponents"
        android:layout_width="370dp"
        android:layout_height="255dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="287dp"
        android:layout_height="34dp"
        android:layout_margin="16dp"
        android:layout_marginTop="56dp"
        android:background="@color/grey_white"
        android:hint="E-mail"
        android:textStyle="bold"
        android:textColorHint="@color/light_Blue"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="287dp"
        android:layout_height="34dp"
        android:layout_margin="20dp"
        android:layout_marginTop="24dp"
        android:background="@color/grey_white"
        android:hint="Senha"
        android:textStyle="bold"
        android:textColorHint="@color/light_Blue"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="68dp"
        android:layout_marginTop="92dp"
        android:text="Entrar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_medium"
        android:backgroundTint="@color/light_Blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"/>

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Não tem uma conta? Criar uma conta"
        android:textColor="@color/light_Blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/tvEsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Esqueci a senha"
        android:textColor="@color/grey_white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />




</androidx.constraintlayout.widget.ConstraintLayout>