...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnMap"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="432dp"
        android:backgroundTint="@color/light_Blue"
        android:fontFamily="@font/montserrat_medium"
        android:text="Nossos armarios"
...
